
2018-07-05  Lionel Henry  <lionel@rstudio.com>

        * R/unit.tests.R (unitTestSetup): Pass extra arguments to sourceCpp()
        for easier debugging.

2018-06-22  Kevin Ushey  <kevinushey@gmail.com>

        * inst/include/Rcpp/api/meat/Rcpp_eval.h: Ensure R_BaseEnv is used

2018-06-21  Lionel Henry  <lionel@rstudio.com>

        * inst/include/Rcpp/api/meat/unwind.h: Extract unwind protection from
        Rcpp::Rcpp_fast_eval() into Rcpp::unwindProtect(). Use this function
        whenever you need to call a C function that might longjump, for instance
        a function from R's C API. Rcpp::unwindProtect() will protect your C++
        stack and throw a Rcpp::internal::LongJump exception to ensure all
        destructors are called. The R longjump is then resumed once it is safe
        to do so. This function powers Rcpp_fast_eval().

        You can use Rcpp::unwindProtect() in two ways. First with a C-like
        callback interface that takes a `SEXP (*)(void* data)` function pointer
        and a `void*` data argument that is passed to the function. Second, if
        you have C++11 enabled, Rcpp::unwindProtect() implements an
        `std::function<SEXP(void)>` overload. You can pass any function object
        or lambda function with the right signature.
        * inst/include/Rcpp/api/meat/Rcpp_eval.h: Idem

2018-06-15  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION (Version, Date): Roll minor version
        * inst/include/Rcpp/config.h: Idem

2018-06-13  Filip Schouwenaars  <filip@datacamp.com>

        * inst/unitTests/runit.embeddedR.R: Evaluate in environment derived
        of baseenv

2018-06-11  Romain Francois  <romain@purrple.cat>

        * inst/include/Rcpp/exceptions.h: Control call and stack display
        after exception / stop
        * inst/unitTests/cpp/Exceptions_nocall.cpp: new test
        * inst/unitTests/runit.Exceptions_nocall.R: idem

2018-06-09  Qiang Kou  <qkou@umail.iu.edu>
