@@ -19,7 +19,7 @@
 // You should have received a copy of the GNU General Public License
 // along with Rcpp.  If not, see <http://www.gnu.org/licenses/>.
 
-#define RCPP_PROTECTED_EVAL
+// [[Rcpp::plugins(unwindProtect,cpp11)]]
 
 #include <Rcpp.h>
 using namespace Rcpp;
@@ -71,8 +71,6 @@ SEXP testUnwindProtect(Environment indicator, bool fail) {
     return out;
 }
 
-
-// [[Rcpp::plugins("cpp11")]]
 
 // [[Rcpp::export]]
 SEXP testUnwindProtectLambda(Environment indicator, bool fail) {
